--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,10 @@
         "${workspaceFolder}/dist/**.js"
       ],
       "args": [
-        "-p", "slt",
+        //"-p", "slt",
+        "-b", "Acts",
+        "-c", "1",
+        //"-v", "1"
         //"-j", "C:\\src\\sfm-utils\\samples\\56TIT.json"
       ]
     },
