refactor: Move some code to methods
Start handling chapter ranges
Validate parameters

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,8 +15,8 @@
       ],
       "args": [
         "-b", "Acts",
-        "-c", "1",
-        "-v", "1-3"
+        "--chapters", "15-16",
+        "--verses", "33-35"
       ]
     },
     {
