--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "npx tsc -p .",
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "npx tsc -w & nodemon -q -w dist"
+    "watch": "npx tsc -w & nodemon -q -w dist",
+    "publish": "npx pkg -t win ./dist/index.js --output-path deploy"
   },
   "author": "SIL International",
   "license": "MIT",
@@ -24,7 +25,13 @@
     "@typescript-eslint/parser": "^5.46.1",
     "eslint": "^8.30.0",
     "nodemon": "^2.0.20",
+    "pkg": "^5.8.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "pkg": {
+    "scripts": "dist/**/*.js",
+    "targets": [ "node18-win-x64"],
+    "outputPath": "deploy"
   }
 }
